--- a/!DOCTYPE .html
+++ b/!DOCTYPE .html
@@ -54,9 +54,23 @@
             margin-right: 8px;
             color: #007BFF; /* Color azul para los iconos */
         }
+        .logo-container {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .logo-container img {
+            height: 100px; /* Ajusta la altura de la imagen */
+            max-width: 100%; /* Asegura que la imagen no exceda el ancho del contenedor */
+            height: auto; /* Mantiene la proporción de la imagen */
+        }
     </style>
 </head>
 <body>
+
+    <div class="logo-container">
+        <img src="squirtle.png" alt="Squirtle con café">
+    </div>
+
     <main>
         <div class="step">
             <h1><i class="fas fa-download icon"></i> Paso 1: Descargar Sklauncher</h1>
